# gnucap-adms

./: .gitignore  AUTHORS  BUGS  Makefile.am  NEWS  NOTES  README  TODO  adms.mk  autogen.sh  bootstrap  cap.va  configure.ac  discipline.h  e_adms.cc  e_adms.h  gnucap-adms.h  gnucap-adms.in  gnucap-adms.mk.in  gnucap.xml  gnuplot.mk  res.va
examples/: Makefile.am  ager.gc  ager.ref  ager.va  callfunctions.gc  inline.gc  inline.ref  lamp.gc  lamp.ref  lamp.va  ldo.gc  ldo.ref  ldo.va  ldovm.core.gc  motor.gc  motor.ref  motor.va  op.gc  op.ref  opamp.gc  opamp.ref  opamp.va  opvm.core.gc  rc.gc  rc.ref  sensor.ref  sensor.va  sensor_chip.gc  sensor_chip.ref  ttint.gc  vbg.gc  vbg.va
ivl-gca/: Makefile.am  expression.c  gca.conf  gnucap.cc  gnucap.conf  priv.h  res.va  statement.c  switches.c
ivl-gca/examples/: README  res.cc  res.h  res.va  res_res_ac.hxx  res_res_top.hxx  res_res_tr.hxx
qucs/: Makefile.am
src/: Makefile.am  c_attach.cc  c_debug.cc  cap.va  constants.h  d_adms_i.cc  d_adms_vbr.cc  discipline.h  e_adms.cc  e_adms.h  e_admsrc.h  gcuf_compat.h  gnucap-adms.h  gnucap-adms.in  gnucap.xml.i  gnucap.xml.in  implicit.xml  io_matrix.h  lang_adms.cc  m_part.h  res.va  signon.cc  split.py  verilog_include.cc
tests/: BSIM6.1.1.va  Makefile.am  abs.gc  abs.ref  adms_res.gc  adms_res.ref  af.0.ref  af.1.ref  afbuf.gc  afbuf.ref  afbuf.va  afsquare.gc  afsquare.ref  afsquare.va  ager.gc  ager.ref  ager.sub.gc  ager.sub.ref  ager.sub.va  ager.va  aging_mos.gc  aging_mos.ref  aging_mos.va  analogfunction.gc  analogfunction.ref  analogfunction.va  bsim6_inv_dc.gc  bsim6_inv_dc.ref  bsim6_inv_dc.sp  bsim6_inv_dc.sp.ref  bsim6_inv_tr.gc  bsim6_inv_tr.ref  bsim6_inv_tr.sp  bsim6_inv_tr.sp.ref  bsim6_inverter_transient.gc  bsim6_inverter_transient.ref  bsim6_inverter_transient.sp  bsim6_inverter_transient.sp.ref  bsim6_ringosc_17.gc  bsim6_ringosc_17.ref  (+205 more)
tests/uf/: abs.ref  adms_res.ref  afbuf.ref  afsquare.ref  afsquare.ref.orig  afsquare.ref.rej  analogfunction.ref  bsim6_inv_tr.ref  cap.ref  cap_rescale.ref  cccsstamp.ref.orig  ccvs.ref  ccvs.ref.orig  chainvs.ref  coil_auto.ref  ddx.ref  diff.ref  diff.ref.orig  instanceparam.ref  int_cont.ref  mid.ref  motor.ref  motor.ref.orig  mul.ref  op.ref  opamp.ref  rc.ref  res2.ref  square.ref  subcoil.1.ref  subcoil.ref  tr.ref  vcvs.ref  vcvs.ref.orig  vcvsstamp.ref  vs1.ref  vs1.ref.orig  vsstamp.ref  vsstamp.ref.orig
